syntax = "proto3";

package auth_protos;

option go_package = "connection_hub/auth_protos";

service Auth{
    rpc CheckUser (JwtToken) returns (UserId){}
}

message JwtToken {
    string jwt = 1;
}

message UserId {
    int64 id = 1;
    bool exists = 2;
}